# ai_bot

./: .env  .gitignore  Dockerfile  Procfile  app.py  bot.py  check_setup.py  config.yaml  pyproject.toml  railway.json  requirements.txt  setup_project.py
ai_bot_glob/: app.py  bot.py  requirements.txt
ai_bot_glob/documents/: metadata.json
ai_bot_glob/documents/علوم/: SelectedPagesText.txt  pdf2text_page_1.txt  pdf2text_page_16.txt  pdf2text_page_17.txt  pdf2text_page_19.txt  pdf2text_page_2.txt  pdf2text_page_3.txt  pdf2text_page_4.txt  pdf2text_page_5.txt  pdf2text_page_7.txt  pdf2text_page_8.txt  pdf2text_page_9.txt
ai_bot_glob/templates/: index.html
documents/تعليم/: أساسيات البرمجة_20241103.txt
documents/تقنية/: مقدمة في الذكاء الاصطناعي_20241103.txt
documents/علوم/: pdf2text_page_10.txt  pdf2text_page_11.txt  pdf2text_page_12.txt  pdf2text_page_13.txt  pdf2text_page_14.txt  pdf2text_page_15.txt  pdf2text_page_18.txt  pdf2text_page_20.txt  pdf2text_page_6.txt
templates/: index.html
