[project]
name = "document-qa-bot"
version = "0.1.0"
description = "Document QA Bot using LangChain with PDF and DOCX support"
requires-python = ">=3.8"

dependencies = [
    "flask>=2.0.0",
    "flask-cors>=4.0.0",
    "flask-talisman>=1.0.0",
    "tqdm>=4.65.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.0.350",
    "langchain-community>=0.0.1",
    "langchain-openai>=0.0.1",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "pyyaml>=6.0.1",
    "python-docx>=0.8.11",
    "docx2txt>=0.8",
    "pypdf>=3.17.1",
    "tiktoken>=0.5.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
